--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
         <link href="css/index.css" rel="stylesheet">
-        <script src="js/index.js"></script>
     </head>
     <body>
         <header>
@@ -44,12 +43,31 @@
                     </div>
                 </div> <!-- main-intro -->
                 <div class="main-work">
+                    <h2>Group Projects</h2>
                     <div class="work-group">
-                        <div class="group-item"></div>
-                        <div class="group-item"></div>
+                        <div class="group-item">
+                            <div class="item-img">
+                                <img src="images/vasa-knekkebrod-logo.png" alt="VASA Knekkebrod logo">
+                            </div>
+                            <div class="item-text">
+                                <h3>VASA Knekkebrod</h3>
+                                <p>Simple landing page project.</p>
+                                <p>Created by: <a href="https://github.com/AlexanderKodehode">Alexander</a>, <a href="https://github.com/Andrekode">André</a>, <a href="https://github.com/SanderTZZ">Sander</a>, <a href="https://github.com/victor-kodehode">Victor</a></p>
+                            </div>
+                            <div class="item-links">
+                                <div><a href="https://github.com/victor-kodehode/VASA-Knekkebrod">github</a></div>
+                                <div><a href="https://victor-kodehode.github.io/VASA-Knekkebrod/">website</a></div>
+                            </div>
+                        </div>
+                        <div class="group-item">
+                            <div class="item-text"></div>
+                            <div class="item-img"></div>
+                            <div class="item-links"></div>
+                        </div>
                     </div>
                 </div>
             </div> <!-- main-container -->
         </main>
+        <script src="js/index.js"></script>
     </body>
 </html>
