--- a/index.html
+++ b/index.html
@@ -51,21 +51,40 @@
                             </div>
                             <div class="item-text">
                                 <h3>VASA Knekkebrod</h3>
-                                <p>Simple landing page project.</p>
-                                <p>Created by: <a href="https://github.com/AlexanderKodehode">Alexander</a>, <a href="https://github.com/Andrekode">André</a>, <a href="https://github.com/SanderTZZ">Sander</a>, <a href="https://github.com/victor-kodehode">Victor</a></p>
+                                <p>Landing page.</p>
+                                <p>Created by: 
+                                    <a href="https://github.com/AlexanderKodehode">Alexander</a>, 
+                                    <a href="https://github.com/Andrekode">André</a>, 
+                                    <a href="https://github.com/SanderTZZ">Sander</a>, 
+                                    <a href="https://github.com/victor-kodehode">Victor</a>
+                                </p>
                             </div>
                             <div class="item-links">
                                 <div><a href="https://github.com/victor-kodehode/VASA-Knekkebrod">github</a></div>
                                 <div><a href="https://victor-kodehode.github.io/VASA-Knekkebrod/">website</a></div>
                             </div>
-                        </div>
+                        </div> <!-- group-item -->
                         <div class="group-item">
-                            <div class="item-text"></div>
-                            <div class="item-img"></div>
-                            <div class="item-links"></div>
-                        </div>
-                    </div>
-                </div>
+                            <div class="item-img">
+                                <img src="images/santa-hunters-logo.png" alt="Santa Hunters logo">
+                            </div>
+                            <div class="item-text">
+                                <h3>Santa Hunters</h3>
+                                <p>Christmas themed website.</p>
+                                <p>Created by: 
+                                    <a href="https://github.com/AlexanderKodehode">Marius</a>, 
+                                    <a href="https://github.com/Andrekode">Martin</a>, 
+                                    <a href="https://github.com/SanderTZZ">Simon</a>, 
+                                    <a href="https://github.com/victor-kodehode">Victor</a>
+                                </p>
+                            </div>
+                            <div class="item-links">
+                                <div><a href="https://github.com/victor-kodehode/julenissen">github</a></div>
+                                <div><a href="https://victor-kodehode.github.io/julenissen/">website</a></div>
+                            </div>
+                        </div> <!-- group-item -->
+                    </div> <!-- work-group -->
+                </div> <!-- main-work -->
             </div> <!-- main-container -->
         </main>
         <script src="js/index.js"></script>
