--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
                                 <h3>Santa Hunters</h3>
                                 <p>Christmas themed website.</p>
                                 <p>Created by: 
-                                    <a href="https://github.com/AlexanderKodehode">Marius</a>, 
-                                    <a href="https://github.com/Andrekode">Martin</a>, 
-                                    <a href="https://github.com/SanderTZZ">Simon</a>, 
+                                    <a href="https://github.com/Marius-Kodehode">Marius</a>, 
+                                    <a href="https://github.com/Martin-Kodehode">Martin</a>, 
+                                    <a href="https://github.com/Simon-Hes">Simon</a>, 
                                     <a href="https://github.com/victor-kodehode">Victor</a>
                                 </p>
                             </div>
