--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>home</title>
         <link href="css/index.css" rel="stylesheet">
     </head>
     <body>
@@ -13,78 +13,39 @@
                 <div class="header-logo">
                     <div class="logo-container">
                         <div class="logo-img"><a href="index.html"><img src="images/portfolio-logo.png" alt="portfolio logo"></a></div>
-                        <div class="logo-text">Victor's Website</div>
+                        <div class="logo-text text-bg">Victor's Website</div>
                     </div> <!-- logo-container -->
                 </div> <!-- header-logo -->
                 <div class="header-menu">
-                    <div class="menu-container">
+                    <div class="menu-container text-bg">
                         <div><a href="index.html">Home</a></div>
                         <div><a href="#">About</a></div>
-                        <div><a href="#">My work</a></div>
+                        <div><a href="mywork.html">My work</a></div>
                         <div><a href="#">Contact</a></div>
                     </div> <!-- menu-container -->
                 </div> <!-- header-menu -->
             </div> <!-- header-container -->
         </header>
+        <div class="bottom-border"></div>
         <main>
             <div class="main-container">
-                <div class="main-intro">
-                    <div class="intro-title">
-                        <h1>Hello, World!</h1>
-                    </div>
-                    <div class="intro-content">
-                        <div class="intro-text">
-                            <p>hi check out my work</p>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, sit maxime fuga commodi dolores velit magni maiores nam veritatis esse quis quisquam! Perferendis, nihil aspernatur est dolores saepe quidem velit, quo fuga alias totam voluptatem? Enim quis aperiam quod non ducimus dolorem, quas expedita vitae labore praesentium minima nostrum in!</p>
+                <div class="top-border"></div>
+                <div class="main-content">
+                    <div class="main-intro">
+                        <div class="intro-title">
+                            <h1>Introduction</h1>
                         </div>
-                        <div class="intro-img">
-                            <img src="images/intro-img.png" alt="profile picture of me">
+                        <div class="intro-content">
+                            <div class="intro-text text-bg">
+                                <p>Hei! Mitt navn er Victor. Jeg er deltaker på IT AMO kurset Kodehode i regi av Jobloop hvor jeg får opplæring i full stack utvikling. Kodespråkene jeg har kjennskap til er JavaScript med HTML og CSS, Python og C.</p>
+                            </div>
+                            <div class="intro-img">
+                                <img src="images/pineapple.jpg" alt="profile picture of me" width="200px" height="200px">
+                            </div>
                         </div>
-                    </div>
-                </div> <!-- main-intro -->
-                <div class="main-work">
-                    <h2>Group Projects</h2>
-                    <div class="work-group">
-                        <div class="group-item">
-                            <div class="item-img">
-                                <img src="images/vasa-knekkebrod-logo.png" alt="VASA Knekkebrod logo">
-                            </div>
-                            <div class="item-text">
-                                <h3>VASA Knekkebrod</h3>
-                                <p>Landing page.</p>
-                                <p>Created by: 
-                                    <a href="https://github.com/AlexanderKodehode">Alexander</a>, 
-                                    <a href="https://github.com/Andrekode">André</a>, 
-                                    <a href="https://github.com/SanderTZZ">Sander</a>, 
-                                    <a href="https://github.com/victor-kodehode">Victor</a>
-                                </p>
-                            </div>
-                            <div class="item-links">
-                                <div><a href="https://github.com/victor-kodehode/VASA-Knekkebrod">github</a></div>
-                                <div><a href="https://victor-kodehode.github.io/VASA-Knekkebrod/">website</a></div>
-                            </div>
-                        </div> <!-- group-item -->
-                        <div class="group-item">
-                            <div class="item-img">
-                                <img src="images/santa-hunters-logo.png" alt="Santa Hunters logo">
-                            </div>
-                            <div class="item-text">
-                                <h3>Santa Hunters</h3>
-                                <p>Christmas themed website.</p>
-                                <p>Created by: 
-                                    <a href="https://github.com/Marius-Kodehode">Marius</a>, 
-                                    <a href="https://github.com/Martin-Kodehode">Martin</a>, 
-                                    <a href="https://github.com/Simon-Hes">Simon</a>, 
-                                    <a href="https://github.com/victor-kodehode">Victor</a>
-                                </p>
-                            </div>
-                            <div class="item-links">
-                                <div><a href="https://github.com/victor-kodehode/julenissen">github</a></div>
-                                <div><a href="https://victor-kodehode.github.io/julenissen/">website</a></div>
-                            </div>
-                        </div> <!-- group-item -->
-                    </div> <!-- work-group -->
-                </div> <!-- main-work -->
+                    </div> <!-- main-intro -->
+                </div> <!-- main-content -->
+                <div class="bottom-border"></div>
             </div> <!-- main-container -->
         </main>
         <script src="js/index.js"></script>
