--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>home</title>
+        <title>contact</title>
         <link href="css/styles.css" rel="stylesheet">
         <script src="js/scripts.js"></script>
     </head>
@@ -31,8 +31,9 @@
         <main>
             <div class="top-border"></div>
             <div class="main-content">
-                <h1>Hello, World!</h1>
-                <p>Welcome to my page!</p>
+                <h1>Contact</h1>
+                <p>You can contact me by email.</p>
+                <p>Email: <a href="mailto:victor.kodehode@gmail.com">victor.kodehode@gmail.com</a></p>
             </div> <!-- main-content -->
             <div class="bottom-border"></div>
         </main>
