--- a/cv.html
+++ b/cv.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>home</title>
+        <title>cv</title>
         <link href="css/styles.css" rel="stylesheet">
         <script src="js/scripts.js"></script>
     </head>
@@ -31,8 +31,26 @@
         <main>
             <div class="top-border"></div>
             <div class="main-content">
-                <h1>Hello, World!</h1>
-                <p>Welcome to my page!</p>
+                <h1>CV</h1>
+                <h2>Sammendrag</h2>
+                <p>Stor interesse for tall og programmering, nøyaktig, pliktoppfyllende og ansvarsfull.</p>
+                <div class="cv-flex">
+                    <div>
+                        <h2>Utdanning</h2>
+                        <ul>
+                            <li>UiS - Bachelor - Matematikk og Fysikk - 2 år</li>
+                            <li>UiB - Årsstudium - Naturvitenskapelige fag - 1 år</li>
+                            <li>Sola VgS - Studiespesialisering i realfag - 3 år</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <h2>Annen erfaring</h2>
+                        <ul>
+                            <li>A.I. Varmepumper AS - Varmepumpemontør - 2 måneder</li>
+                            <li>1. Sola Speidergruppe - Speider - 10 år</li>
+                        </ul>
+                    </div>
+                </div>
             </div> <!-- main-content -->
             <div class="bottom-border"></div>
         </main>
