--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>home</title>
+        <title>about</title>
         <link href="css/styles.css" rel="stylesheet">
         <script src="js/scripts.js"></script>
     </head>
@@ -31,8 +31,11 @@
         <main>
             <div class="top-border"></div>
             <div class="main-content">
-                <h1>Hello, World!</h1>
-                <p>Welcome to my page!</p>
+                <h1>About Me</h1>
+                <img src="images/pineapple.jpg" alt="profile picture of me" width="200px" height="200px">
+                <p>Hi! The name's Victor. I'm a participant in the IT AMO course <span class="important">Kodehode</span> directed by <span class="important">Jobloop</span> where I'm training to become a full stack developer. I'm familiar with HTML/CSS/JavaScript, Python and C.</p>
+                <h2>CV</h2>
+                <p>My CV you can find <a href="cv.html">here</a>.</p>
             </div> <!-- main-content -->
             <div class="bottom-border"></div>
         </main>
