--- a/cv.html
+++ b/cv.html
@@ -34,22 +34,72 @@
                 <h1>CV</h1>
                 <h2>Sammendrag</h2>
                 <p>Stor interesse for tall og programmering, nøyaktig, pliktoppfyllende og ansvarsfull.</p>
-                <div class="cv-flex">
-                    <div>
-                        <h2>Utdanning</h2>
-                        <ul>
-                            <li>UiS - Bachelor - Matematikk og Fysikk - 2 år</li>
-                            <li>UiB - Årsstudium - Naturvitenskapelige fag - 1 år</li>
-                            <li>Sola VgS - Studiespesialisering i realfag - 3 år</li>
-                        </ul>
+                <div>
+                    <h1>CV (norsk/norwegian)</h1>
+                    <hr>
+                    <h2>Utdanning</h2>
+                    <hr>
+                    <div class="cv-item">
+                        <h3>Matematikk og fysikk</h3>
+                        <p>Bachelorstudium</p>
+                        <p>Universitetet i Stavanger</p>
+                        <p>Aug 2015 - Des 2015</p>
+                        <p>Aug 2017 - Des 2018</p>
                     </div>
-                    <div>
-                        <h2>Annen erfaring</h2>
-                        <ul>
-                            <li>A.I. Varmepumper AS - Varmepumpemontør - 2 måneder</li>
-                            <li>1. Sola Speidergruppe - Speider - 10 år</li>
-                        </ul>
+                    <div class="cv-item">
+                        <h3>Naturvitskaplege fag</h3>
+                        <p>Årsstudium</p>
+                        <p>Universitetet i Bergen</p>
+                        <p>Aug 2016 - Jun 2017</p>
                     </div>
+                    <div class="cv-item">
+                        <h3>Realfag</h3>
+                        <p>Studiespesialisering</p>
+                        <p>Sola Videregående Skole</p>
+                        <p>Aug 2012 - Jun 2015</p>
+                    </div>
+                    <hr>
+                    <h2>Utvalgt erfaring</h2>
+                    <hr>
+                    <div class="cv-item">
+                        <h3>Varmepumpemontør</h3>
+                        <p>A.I Varmepumper AS</p>
+                        <p>Installering og service.</p>
+                        <p>Mai 2021 - Jun 2021</p>
+                    </div>
+                    <hr>
+                    <h2>Annen erfaring</h2>
+                    <hr>
+                    <ul>
+                        <li>10 år som speider</li>
+                        <li>1 sommer som medarbeider for hagesenter</li>
+                    </ul>
+                    <hr>
+                    <h2>Kurs / Verv</h2>
+                    <hr>
+                    <div class="cv-item">
+                        <h3>Full stack utvikler kurs</h3>
+                        <p>Kodehode</p>
+                        <p>Jobloop</p>
+                        <p>Nov 2021 - Okt 2022 (pågående)</p>
+                    </div>
+                    <hr>
+                    <h2>Ferdigheter</h2>
+                    <hr>
+                    <div class="cv-item">
+                        <h3>Språk</h3>
+                        <p>Norsk morsmål</p>
+                        <p>Engelsk flytende skriftlig og muntlig</p>
+                    </div>
+                    <div class="cv-item">
+                        <h3>IT</h3>
+                        <p>God kjennskap til Microsoft Excel.</p>
+                        <p>Noe kjennskap til Word og Powerpoint.</p>
+                    </div>
+                    <hr>
+                    <h2>Referanser</h2>
+                    <hr>
+                    <p>Atle Ims, A.I Varmepumper AS</p>
                 </div>
             </div> <!-- main-content -->
             <div class="bottom-border"></div>
