--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link href="css/styles.css" rel="stylesheet">
         <script src="js/scripts.js"></script>
     </head>
-    <body>
+    <body onload="draw()">
         <header>
             <div class="header-content">
                 <div class="header-logo">
@@ -33,6 +33,7 @@
             <div class="main-content">
                 <h1>Hello, World!</h1>
                 <p>Welcome to my page!</p>
+                <canvas id="canvas"></canvas>
             </div> <!-- main-content -->
             <div class="bottom-border"></div>
         </main>
