--- a/about.html
+++ b/about.html
@@ -6,6 +6,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>about</title>
         <link href="css/styles.css" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
         <script src="js/scripts.js"></script>
     </head>
     <body>
@@ -33,7 +36,8 @@
             <div class="main-content">
                 <h1>About Me</h1>
                 <img src="images/pineapple.jpg" alt="profile picture of me" width="200px" height="200px">
-                <p>Hi! The name's Victor. I'm a participant in the IT AMO course <span class="important">Kodehode</span> directed by <span class="important">Jobloop</span> where I'm training to become a full stack developer. I'm familiar with HTML/CSS/JavaScript, Python and C.</p>
+                <p>Hey! My name's Victor. I'm a participant on the IT AMO course Kodehode directed by Jobloop where I learn to become a full stack web developer. During my time here I've gotten good at several languages such as Python, JavaScript, HTML and CSS. Before the course I taught myself C, which made learning the other languages much easier. At this course I've shown, among other things, efficiency, ability to build and follow a routine, understand and tackle a project in steps and to meet deadlines.</p>
+                <p>I have a background in mathematics, physics and prior knowledge of programming in C. Because of this, logic and problem solving has become second nature to me, and this carries over to programming.</p>
                 <h2>CV</h2>
                 <p>My CV you can find <a href="cv.html">here</a>.</p>
             </div> <!-- main-content -->
