commit bouncy red ball

--- a/cv.html
+++ b/cv.html
@@ -9,7 +9,6 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-        <script src="js/scripts.js"></script>
     </head>
     <body>
         <header>
@@ -35,75 +34,84 @@
             <div class="top-border"></div>
             <div class="main-content">
                 <h1>CV</h1>
-                <h2>Sammendrag</h2>
-                <p>Stor interesse for tall og programmering, nøyaktig, pliktoppfyllende og ansvarsfull.</p>
-                <div>
-                    <h1>CV (norsk/norwegian)</h1>
-                    <hr>
-                    <h2>Utdanning</h2>
-                    <hr>
-                    <div class="cv-item">
-                        <h3>Matematikk og fysikk</h3>
-                        <p>Bachelorstudium</p>
-                        <p>Universitetet i Stavanger</p>
-                        <p>Aug 2015 - Des 2015</p>
-                        <p>Aug 2017 - Des 2018</p>
-                    </div>
-                    <div class="cv-item">
-                        <h3>Naturvitskaplege fag</h3>
-                        <p>Årsstudium</p>
-                        <p>Universitetet i Bergen</p>
-                        <p>Aug 2016 - Jun 2017</p>
-                    </div>
-                    <div class="cv-item">
-                        <h3>Realfag</h3>
-                        <p>Studiespesialisering</p>
-                        <p>Sola Videregående Skole</p>
-                        <p>Aug 2012 - Jun 2015</p>
-                    </div>
-                    <hr>
-                    <h2>Utvalgt erfaring</h2>
-                    <hr>
-                    <div class="cv-item">
-                        <h3>Varmepumpemontør</h3>
-                        <p>A.I Varmepumper AS</p>
-                        <p>Installering og service.</p>
-                        <p>Mai 2021 - Jun 2021</p>
-                    </div>
-                    <hr>
-                    <h2>Annen erfaring</h2>
-                    <hr>
-                    <ul>
-                        <li>10 år som speider</li>
-                        <li>1 sommer som medarbeider for hagesenter</li>
-                    </ul>
-                    <hr>
-                    <h2>Kurs / Verv</h2>
-                    <hr>
-                    <div class="cv-item">
-                        <h3>Full stack utvikler kurs</h3>
-                        <p>Kodehode</p>
-                        <p>Jobloop</p>
-                        <p>Nov 2021 - Okt 2022 (pågående)</p>
-                    </div>
-                    <hr>
-                    <h2>Ferdigheter</h2>
-                    <hr>
-                    <div class="cv-item">
-                        <h3>Språk</h3>
-                        <p>Norsk morsmål</p>
-                        <p>Engelsk flytende skriftlig og muntlig</p>
-                    </div>
-                    <div class="cv-item">
-                        <h3>IT</h3>
-                        <p>God kjennskap til Microsoft Excel.</p>
-                        <p>Noe kjennskap til Word og Powerpoint.</p>
-                    </div>
-                    <hr>
-                    <h2>Referanser</h2>
-                    <hr>
-                    <p>Atle Ims, A.I Varmepumper AS</p>
+                <hr>
+                <h2>Education</h2>
+                <hr>
+                <div class="cv-item">
+                    <h3>Mathematics and Physics</h3>
+                    <p>Bachelor's degree</p>
+                    <p>University of Stavanger</p>
+                    <p>Aug 2015 - Dec 2015</p>
+                    <p>Aug 2017 - Dec 2018</p>
                 </div>
+                <div class="cv-item">
+                    <h3>Mathematics and Natural Sciences</h3>
+                    <p>1 year study</p>
+                    <p>University of Bergen</p>
+                    <p>Aug 2016 - Jun 2017</p>
+                </div>
+                <div class="cv-item">
+                    <h3>Science</h3>
+                    <p>Study specialization</p>
+                    <p>Sola High School</p>
+                    <p>Aug 2012 - Jun 2015</p>
+                </div>
+                <hr>
+                <h2>Highlighted Experience</h2>
+                <hr>
+                <div class="cv-item">
+                    <h3>Heat pump installer</h3>
+                    <p>A.I Varmepumper AS</p>
+                    <p>Installation and service</p>
+                    <p>May 2021 - Jun 2021</p>
+                </div>
+                <hr>
+                <h2>Other Experience</h2>
+                <hr>
+                <p>10 years as a scout</p>
+                <p>1 summer helping out at a garden center</p>
+                <hr>
+                <h2>Courses</h2>
+                <hr>
+                <div class="cv-item">
+                    <h3>Full stack development course</h3>
+                    <p>Kodehode</p>
+                    <p>Jobloop</p>
+                    <p>Nov 2021 - Oct 2022 (ongoing)</p>
+                </div>
+                <hr>
+                <h2>Skills</h2>
+                <hr>
+                <div class="cv-item">
+                    <h3>Language</h3>
+                    <ul>
+                        <li>Norwegian, fluent</li>
+                        <li>English, fluent</li>
+                        <li>German, partial understanding of words</li>
+                    </ul>
+                </div>
+                <div class="cv-item">
+                    <h3>IT</h3>
+                    <ul>
+                        <li>Well versed in Microsoft Excel</li>
+                        <li>Word</li>
+                        <li>Powerpoint</li>
+                    <ul>
+                </div>
+                <div class="programming">
+                    <h3>Programming</h3>
+                    <ul>
+                        <li>C</li>
+                        <li>Python</li>
+                        <li>JavaScript</li>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                    </ul>
+                </div>
+                <hr>
+                <h2>References</h2>
+                <hr>
+                <p>Atle Ims, A.I Varmepumper AS</p>
             </div> <!-- main-content -->
             <div class="bottom-border"></div>
         </main>
