--- a/index.html
+++ b/index.html
@@ -36,11 +36,14 @@
                 <h1>Hello, World!</h1>
                 <p>Welcome to my page!</p>
                 <div class="canvas-container">
+                    <h2>bouncing objects</h2>
                     <canvas id="myCanvas" width="480" height="320"></canvas>
                 </div>
+                <p><a href="game1.html">go to game #1</a></p>
             </div> <!-- main-content -->
             <div class="bottom-border"></div>
         </main>
         <script src="js/scripts.js"></script>
+        <script src="js/canvas1.js"></script>
     </body>
 </html>
