--- a/game1.html
+++ b/game1.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Work In Progress</h1>
-    <p><a href="index.html">go back</a></p>
+    <!-- <p><a href="index.html">go back</a></p> -->
     <h2 id="game-title">PONG!</h2>
     <canvas id="canvas" width="1000px" height="500px"></canvas>
     <script src="js/game1.js"></script>
