--- a/game1.html
+++ b/game1.html
@@ -7,10 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Work In Progress</h1>
-    <!-- <p><a href="index.html">go back</a></p> -->
-    <h2 id="game-title">PONG!</h2>
-    <canvas id="canvas" width="1000px" height="500px"></canvas>
-    <script src="js/game1.js"></script>
+    <h1>PONG!</h1>
+    <h2 id="game-status">GAME ON!</h2>
+    <canvas id="canvas" width="500px" height="500px"></canvas>
+    <script src="game1.js"></script>
 </body>
 </html>
